...
    <string name="hall_title">Зал</string>
    <string name="edit_hall">Редактировать</string>
    <string name="finish_editing">Готово</string>
    <string name="enter_fullscreen">Полный экран</string>
    <string name="exit_fullscreen">Выйти из полного экрана</string>
    <string name="edit_mode_active">Режим редактирования</string>
    <string name="empty_hall_title">Столов пока нет</string>
    <string name="empty_hall_message">Включите режим редактирования и добавьте первый стол</string>
    <string name="add_table">Добавить стол</string>
    <string name="open_hall_actions">Открыть действия зала</string>
    <string name="close_hall_actions">Закрыть действия зала</string>
    <string name="lock_canvas">Зафиксировать рабочую область</string>
    <string name="unlock_canvas">Разблокировать рабочую область</string>
...
